fixed classnames to prevent styling overlaps

--- a/BeaconAndLoaves/ClientApp/src/components/pages/Auth/Auth.scss
+++ b/BeaconAndLoaves/ClientApp/src/components/pages/Auth/Auth.scss
@@ -20,11 +20,11 @@ body {
     min-height: 100%;
 }
 
-p, h3, h6 {
+.title, .sub-title {
   color: white;
 }
 
-p {
+.title {
   font-size: 5em;
 }
 
